# karel

./: Cargo.toml  LICENSE  README.md
src/: ggez_view.rs  helpers.rs  interface.rs  lib.rs  main.rs  model.rs  static_interface.rs  tty_view.rs
