[package]
name = "karel"
version = "0.1.0"
edition = "2024"

[lib]
name = "karel"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["ggez"]
ggez = ["dep:ggez"]

[dependencies]
crossterm = "0.27"
ggez = { version = "0.9.3", default-features = false, optional = true }
nu-ansi-term = "0.49"
once_cell = "1.18"
